GT-6: updated welcome page fix: fix language switch in the header

--- a/src/translations/belorussian/translation.json
+++ b/src/translations/belorussian/translation.json
@@ -1,6 +1,7 @@
 {
     "login_button": "Увайсцi",
     "sign-up_button": "Зарэгістравацца",
+    "go_to_main_page_button": "ПЕРАЙСЦІ НА ГАЛОЎНУЮ СТАРОНКУ",
 
     "login_title": "Увайдзіце ў свой уліковы запіс",
     "login-button_title": "Увайсцi",
@@ -19,6 +20,22 @@
     "password_forgot": "Забыліся на пароль?",
     "password_placeholder": "Ваш пароль",
     "password_error": "Калі ласка, увядзіце сапраўдны пароль",
-    "password_error_message": "Патрабаванні да пароля: 8-20 сімвалаў, 1 лічба, 1 літара, 1 сімвал."
+    "password_error_message": "Патрабаванні да пароля: 8-20 сімвалаў, 1 лічба, 1 літара, 1 сімвал.",
+
+    "have_account": "У вас ужо ёсць уліковы запіс? ",
+    "sign-in_button": "Увайсцi",
+    "register": "Зарэгістравацца",
+    "register_page": "Старонка Зарэгістрацыi ",
+
+    "login_page": "Старонка ўваходу",
+    "create_account": "Стварыць уліковы запіс.",
+    "new_graphql": "Упершыню карыстаецеся GraphQL? ",
+
+    "welcome_title": "Сардэчна запрашаем на нашу старонку сервера GraphQL!",
+    "welcome_message": "Мы рады вітаць вас тут і даць вам доступ да нашых даных праз GraphQL API. Наш сервер забяспечвае магутны пошук дадзеных і магчымасці апрацоўкі запытаў, а таксама забяспечвае хуткі і надзейны доступ да інфармацыі.",
+
+    "welcome_title_2": "Выкарыстоўвайце лепшы інструмент!",
+    "welcome_message_2": "Мы спадзяемся, што наш сервер GraphQL будзе карысным і простым у выкарыстанні. Дзякуй, што выбралі нашу платформу для вашых патрэб дадзеных."
+
 
 }
