--- a/src/translations/english/translation.json
+++ b/src/translations/english/translation.json
@@ -1,6 +1,7 @@
 {
     "login_button": "Log In",
     "sign-up_button": "Sign Up",
+    "go_to_main_page_button": "GO TO MAIN PAGE",
 
     "login_title": "Sign in to your account",
     "login-button_title": "Sign In",
@@ -15,9 +16,25 @@
     "email_error": "Please enter valid email",
     "email_error_message": "invalid email address",
 
-    "password": "Email address",
+    "password": "Password",
     "password_forgot": "Forgot password?",
-    "password_placeholder": "Your email address",
+    "password_placeholder": "Your password",
     "password_error": "Please enter valid password",
-    "password_error_message": "Password requirements: 8-20 characters, 1 number, 1 letter, 1 symbol."
+    "password_error_message": "Password requirements: 8-20 characters, 1 number, 1 letter, 1 symbol.",
+
+    "have_account": "Already have an account? ",
+    "sign-in_button": "Sign In",
+    "register": "Register",
+    "register_page": "Register Page",
+
+    "login_page": "Login Page",
+    "create_account": "Create an account.",
+    "new_graphql": "New to GraphQL? ",
+
+    "welcome_title": "Welcome to our GraphQL server page!",
+    "welcome_message": "We are happy to welcome you here and give you access to our data through GraphQL API. Our server provides powerful data retrieval and processing capabilities requests, and also provides fast and reliable access to information.",
+
+    "welcome_title_2": "Use the best tool!",
+    "welcome_message_2": "We hope you find our GraphQL server useful and easy to use. Thank you for choosing our platform for your data needs."
+
 }
