fix: fix logout-button_title

--- a/src/translations/belorussian/translation.json
+++ b/src/translations/belorussian/translation.json
@@ -6,7 +6,7 @@
     "login_title": "Увайдзіце ў свой уліковы запіс",
     "login-button_title": "Увайсцi",
 
-    "logout-button_title": "Выйсти ",
+    "logout-button_title": "Выйсцi ",
 
     "name": "Імя",
     "name_placeholder": "Ваша імя і прозвішча",
