--- a/src/translations/english/translation.json
+++ b/src/translations/english/translation.json
@@ -1,48 +1,49 @@
 {
-    "login_button": "Log In",
-    "sign-up_button": "Sign Up",
-    "go_to_main_page_button": "GO TO MAIN PAGE",
+  "login_button": "Log In",
+  "sign-up_button": "Sign Up",
+  "go_to_main_page_button": "GO TO MAIN PAGE",
 
-    "login_title": "Sign in to your account",
-    "login-button_title": "Sign In",
+  "login_title": "Sign in to your account",
+  "login-button_title": "Sign In",
 
-    "logout-button_title": "Logout",
+  "logout-button_title": "Logout",
 
-    "name": "Name",
-    "name_placeholder": "Your first and last name",
-    "name_error": "Please enter your first and last name",
-    "name_error_message": " 'Enter your first and last name with a capital letter. Minimum 2 characters, maximum 30 (Example: Jean Graham) '",
+  "name": "Name",
+  "name_placeholder": "Your first and last name",
+  "name_error": "Please enter your first and last name",
+  "name_error_message": " 'Enter your first and last name with a capital letter. Minimum 2 characters, maximum 30 (Example: Jean Graham) '",
 
-    "email": "Email address",
-    "email_placeholder": "Your email address",
-    "email_error": "Please enter valid email",
-    "email_error_message": "invalid email address",
+  "email": "Email address",
+  "email_placeholder": "Your email address",
+  "email_error": "Please enter valid email",
+  "email_error_message": "invalid email address",
 
-    "password": "Password",
-    "password_forgot": "Forgot password?",
-    "password_placeholder": "Your password",
-    "password_error": "Please enter valid password",
-    "password_error_message": "Password requirements: 8-20 characters, 1 number, 1 letter, 1 symbol.",
+  "password": "Password",
+  "password_forgot": "Forgot password?",
+  "password_placeholder": "Your password",
+  "password_error": "Please enter valid password",
+  "password_error_message": "Password requirements: 8-20 characters, 1 number, 1 letter, 1 symbol.",
 
-    "have_account": "Already have an account? ",
-    "sign-in_button": "Sign In",
-    "register": "Register",
-    "register_page": "Register Page",
+  "have_account": "Already have an account? ",
+  "sign-in_button": "Sign In",
+  "register": "Register",
+  "register_page": "Register Page",
 
-    "login_page": "Login Page",
-    "create_account": "Create an account.",
-    "new_graphql": "New to GraphQL? ",
+  "login_page": "Login Page",
+  "create_account": "Create an account.",
+  "new_graphql": "New to GraphQL? ",
 
-    "welcome_title": "Welcome to our GraphQL server page!",
-    "welcome_message": "We are happy to welcome you here and give you access to our data through GraphQL API. Our server provides powerful data retrieval and processing capabilities requests, and also provides fast and reliable access to information.",
+  "welcome_title": "Welcome to our GraphQL server page!",
+  "welcome_message": "We are happy to welcome you here and give you access to our data through GraphQL API. Our server provides powerful data retrieval and processing capabilities requests, and also provides fast and reliable access to information.",
 
-    "welcome_title_2": "Use the best tool!",
-    "welcome_message_2": "We hope you find our GraphQL server useful and easy to use. Thank you for choosing our platform for your data needs.",
+  "welcome_title_2": "Use the best tool!",
+  "welcome_message_2": "We hope you find our GraphQL server useful and easy to use. Thank you for choosing our platform for your data needs.",
 
-    "response_text": "Press the Play Button to get a response here",
-    "schema": "SCHEMA",
-    "docs": "DOCS",
-    "query_variables": "Query Variables",
-    "http_headers": "HTTP Headers"
-
+  "response_text": "Press the Play Button to get a response here",
+  "schema": "SCHEMA",
+  "docs": "DOCS",
+  "query_variables": "Query Variables",
+  "http_headers": "HTTP Headers",
+  "select_lang": "Select language",
+  "welcome_title_short": "Welcome"
 }
